# Practice_C

./: .gitignore  1.txt  Readme.md  Tài liệu.rar  Vd_pointer.c  pointer.c  test.txt
Array/LT/: main.c
Dynamic_memory_allocate/: Bai2.c  LT_memory.c  Vd.c
File/LT_BT/: LT.c
File/Read_bin_write_json/: 2.txt  main.c  ptp.c
Hacker_rank/: Cut_string.c  Reverse_array.c  fre_number.c  sort_c.c
Leet_code_c/: 121-Best Time to Buy and Sell Stock.c  189-Rotate Array.c  26-remove_duplicate.c  27-remove_element.c  80-Remove Duplicates from Sorted Array II.c  88-merge_sorted_array.c
Linklist/: LT.c  list.c  list.h
Min_protocol/: main.c
Pointer/: func_pointer.c  pointer.c  rm_whitespace.c
Pointer/BT/: Bai1.c  Bai2.c  Bai3.c  Bai4.c  Bai5.c  Bai6.c  Bai6_string.c
Pointer_to_pointer/: Lt.c  capphat.c
Pointer_to_pointer/BT/: bai1.c
Pointer_to_pointer/Vd/: Capphat_mang2chieu.c  Mangcontro.c  vd1.c
Pointer_to_pointer/controham/: Bai1.c  Vd.c  controham.c
Practice/String_xaukitu/: Bai1_xaydungam.c  Dem_so_ki_tu.c  reverse_arr_fast.c  reverse_arr_stepbystep.c  reverse_character.c  sap_xep_tu.c
Practice/linklist/: list.c  list.h  main.c
Queue_circular queue/Queue/: main.c  queue.c  queue.h
Ring_buffer/: main.c  ring_buf.c  ring_buf.h
State_machine/: main.c  ring_buff.c  ring_buff.h
String/Bai1/: CMakeLists.txt  bai1.c
String/Bai2/: CMakeLists.txt  bai2.c
String/Bai3/: CMakeLists.txt  bai3.c
String/Bai4/: CMakeLists.txt  bai4.c
String/LT/: CMakeLists.txt  main.c
Struct_Union/: B2_struct.c  Bt_enum.c  Bt_struct.c  LT_struct.c  LT_union.c
(+54 files in other folders)
